# NNBAR_Detector

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  config.h.in  nnbar-calo-sim.cc  pytest.ini  rebuild_with_celeritas.sh  signal_cmd.file  vis.mac
batch/: run_all_cosmics.sh  signal_batch_run.bash
batch/cosmic_electron_runs/: run_0.bash  run_1.bash  run_5.bash
batch/cosmic_gamma_runs/: cosmic_gamma.sh  run_0.bash  run_1.bash  run_3.bash  run_4.bash
batch/cosmic_muon_runs/: cosmic_muon.sh  run_0.bash  run_3.bash  run_4.bash  run_5.bash
batch/cosmic_neutron_runs/: cosmic_neutron.sh  run_0.bash  run_3.bash  run_5.bash
batch/cosmic_proton_runs/: run_1.bash  run_2.bash  run_3.bash  run_5.bash
batch/debug/: valgrind_check.bash
batch_scripts/: test_cosmic_batch_run.bash
batch_scripts/cosmic_electron_runs/: cosmic_electron.sh  run_2.bash  run_3.bash  run_4.bash
batch_scripts/cosmic_gamma_runs/: run_2.bash  run_5.bash
batch_scripts/cosmic_muon_runs/: run_1.bash  run_2.bash
batch_scripts/cosmic_neutron_runs/: run_1.bash  run_2.bash  run_4.bash
batch_scripts/cosmic_proton_runs/: cosmic_proton.sh  run_0.bash  run_4.bash
batch_scripts/debug/: massif_check.bash
cmake/: FetchDependencies.cmake  FindCeleritas.cmake  FindGarfield.cmake  FindOpticks.cmake
cmake/Modules/: FindCUDAToolkit.cmake
config/: PMT_output_layout.json
config/output_layouts/: beampipe_output.json  carbon_output.json  interaction_output.json  leadglass_output.json  particle_output.json  pmt_output.json  scintillator_output.json  silicon_output.json  tpc_output.json
data/lead_glass_position/: lead_glass_position.csv  lead_glass_position_fb.csv
docs/: Detector_Geometry_Reference.md  GPU_ARCHITECTURE_DESIGN.md  List_of_Commands.md  README.md  TPC_Simulation_Technical_Manual.md  reconstruction.md
include/: CarbonSD.hh  DetectorConstruction.hh  EventAction.hh  G4MCPLGenerator.hh  NNbarHit.hh  NNbarRun.hh  PrimaryGeneratorAction_CRY.hh  RunAction.hh
include/Detector_Module/: Cosmic_Shielding_geometry.hh  LeadGlass_geometry.hh  Scintillator_geometry.hh  Silicon_geometry.hh  TPC_geometry.hh  beampipe_geometry.hh  beampipe_shielding_geometry.hh
include/Sensitive_Detector/: CarbonSD.hh  DetArea_SD.hh  LeadGlassSD.hh  TPCSD.hh  TubeSD.hh
include/core/: Analysis.hh  CRYPrimaryGenerator.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh
include/detector/: Cosmic_Shielding_geometry.hh  LeadGlass_geometry.hh  Scintillator_geometry.hh  Silicon_geometry.hh  TPC_geometry.hh  beampipe_geometry.hh  beampipe_shielding_geometry.hh
include/generator/: G4MCPLGenerator.hh
include/gpu/: GPUManager.hh  OpticalPhotonGPU.hh  TPCDriftGPU.hh
include/gui/: DashboardPanel.hh  DashboardWindow.hh  EventDisplay.hh  G4CommandPanel.hh  MaterialBudgetPlot.hh  PhoenixDisplay.hh  TPCPadDisplay.hh
include/hits/: NNbarRun.hh
include/physics/: CeleritasCalorimeter.hh  CeleritasInterface.hh  GarfieldGPU.hh  GarfieldModel.hh  OpticksInterface.hh  TPCDriftManager.hh  TPCFieldMap.hh  TPCPadReadout.hh
include/sensitive/: CarbonSD.hh  DetArea_SD.hh  LeadGlassSD.hh  PMTSD.hh  Scint_DetSD.hh  ScintillatorSD.hh  ShieldSD.hh  SiliconSD.hh  TPCSD.hh  TubeSD.hh
include/util/: GeometryManager.hh  GeometryParameters.hh
lead_glass_position/: lead_glass_position.csv  lead_glass_position_fb.csv
macro/: quick_test.mac  test.mac  test_signal_quick.mac
macro/calibration/: CALIBRATION_AND_PID_PLAN.md  analyze_calibration.py  calib_quick_leadglass.mac  calib_quick_scintillator.mac  gamma_energy_scan_full.mac  pi0_calib.mac  run_all_calibrations.mac
macro/signal/: run_signal.mac  run_signal_100k.mac
macro/studies/: charged_pion_proton_foil_stress.mac  multiprimary_pion_proton_foil_stress.mac  pi0_foil_energy_scan.mac  pi0_foil_mass.mac
macros/: background_compton.mac  signal_pion_minus.mac  signal_pion_plus.mac  signal_proton.mac
nnbar_reconstruction/: __init__.py  calibration.py  cli.py  io.py  reconstruction.py  validation.py
scripts/: build.sh  build_arrow.sh  complete_opticks_build.sh  complete_opticks_native.sh  configure.sh  install_all_gpu.sh  install_gpu_packages.sh  install_step1_cuda.sh  install_step2_deps.sh  install_step3_geant4.sh  install_step4_garfield.sh  install_step5_celeritas.sh  install_step6_opticks.sh  rebuild_opticks_for_g4_112.sh  setup_dependencies.sh  setup_environment.sh  wrapper_template.sh.in
slurm/: run_cosmic.slurm
src/: AbsorberSD.cc  ActionInitialization.cc  CarbonSD.cc  DetArea_SD.cc  DetectorConstruction.cc  EventAction.cc  G4MCPLGenerator.cc  NNbarHit.cc  NNbarRun.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction_CRY.cc  RunAction.cc  SiliconSD.cc  SteppingAction.cc  TPCSD.cc  TubeSD.cc  main.cc
src/Detector_Module/: Cosmic_Shielding_geometry.cc  LeadGlass_geometry.cc  Scintillator_geometry.cc  Silicon_geometry.cc  TPC_geometry.cc  beampipe_geometry.cc  beampipe_shielding_geometry.cc
src/Sensitive_Detector/: CarbonSD.cc  DetArea_SD.cc  LeadGlassSD.cc  PMTSD.cc  Scint_DetSD.cc  ScintillatorSD.cc  ShieldSD.cc  SiliconSD.cc  TPCSD.cc  TubeSD.cc
src/core/: ActionInitialization.cc  CRYPrimaryGenerator.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc
src/detector/: Cosmic_Shielding_geometry.cc  LeadGlass_geometry.cc  Scintillator_geometry.cc  Silicon_geometry.cc  TPC_geometry.cc  beampipe_geometry.cc  beampipe_shielding_geometry.cc
src/generator/: G4MCPLGenerator.cc  G4MCPLWriter.cc
src/gpu/: GPUManager.cc  OpticalPhotonGPU.cc  TPCDriftGPU.cc
src/gui/: DashboardPanel.cc  DashboardWindow.cc  EventDisplay.cc  G4CommandPanel.cc  MaterialBudgetPlot.cc  PhoenixDisplay.cc  TPCPadDisplay.cc
src/hits/: NNbarHit.cc  NNbarRun.cc
src/physics/: CeleritasCalorimeter.cc  (+8 more)
tests/: test_cmake_configuration.py  test_cpp_static_safety.py  test_cry_integration_static.py  test_pid_calibration.py  test_reconstruction_smoke.py  test_reconstruction_validation.py  test_study_macros.py
(+58 files in other folders)
